Address David's comments